<resources>
    <string name="app_name">VehicleMaintenanceRebuild</string>

    <string name="myVehiclesScreenName">My Vehicles</string>
    <string name="fuelScreenName">Fuel</string>
    <string name="maintenanceScreenName">Maintenance</string>
    <string name="reportsScreenName">Reports</string>
    <string name="settings_menu_name">Settings</string>
    <string name="myVehicles_Header">My vehicles</string>
    <string name="welcome_Header">Hi Lawrence</string>
    <string name="welcome_message">Hope you\'re having a great day!</string>
    <string name="addNewVehicleButton">Add New Vehicle</string>
    <string name="not_all_details_entered">Please Complete all Fields</string>

    <string name="recycler_view_list_item_vehicle_name">Vehicle Name</string>
    <string name="recycler_view_list_item_vehicle_make">Vehicle Make</string>
    <string name="recycler_view_list_item_vehicle_model">Vehicle Model</string>

    <string name="noVehiclesToDisplay">There are no vehicles to display right now.\n Add a new vehicle to your garage. </string>
</resources>