<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/recycler_view_card_layout"
            android:layout_width="390dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/recycler_view_list_item_background"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recycler_view_card_layout_Constraints_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/recycler_view_card_layout_imageView"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/vehicle_pic"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                
                <com.google.android.material.textview.MaterialTextView
                    style="@style/VehicleMaintenance.Font.RecyclerView.CardView.VehicleName"
                    android:id="@+id/recycler_view_card_layout_textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/recycler_view_card_layout_imageView"
                    android:layout_margin="10dp"
                    android:text="@string/recycler_view_list_item_vehicle_name"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/VehicleMaintenance.Font.RecyclerView.CardView.VehicleMakeModel"
                    android:id="@+id/recycler_view_card_layout_textViewMake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_card_layout_textViewName"
                    app:layout_constraintStart_toEndOf="@id/recycler_view_card_layout_imageView"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/recycler_view_list_item_vehicle_make"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/VehicleMaintenance.Font.RecyclerView.CardView.VehicleMakeModel"
                    android:id="@+id/recycler_view_card_layout_textViewModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_card_layout_textViewMake"
                    app:layout_constraintStart_toEndOf="@id/recycler_view_card_layout_imageView"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/recycler_view_list_item_vehicle_model"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/VehicleMaintenance.Button.Primary"
                    android:id="@+id/recycler_view_card_layout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="Edit Vehicle"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintStart_toEndOf="@+id/recycler_view_card_layout_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_card_layout_textViewModel" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/heart_like_button_check_box"
                    style="@style/VehicleMaintenance.LikeCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:button="@drawable/heart_button_selector" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>